--- a/tutorial/0-models-and-events.html
+++ b/tutorial/0-models-and-events.html
@@ -54,7 +54,7 @@ myTweet.set('message', 'Hello, world!');
 /* Using the reference, get the message attribute of the model and display it:
  * http://backbonejs.org/#Model-get */
 
-// window.alert(YOUR CODE HERE);
+// window.alert(myTweet.get('message'));
 
 /* - Backbone EVENTS ----------------------------------------------------------
  * Backbone gives us the ability to listen for events on our models,
@@ -76,14 +76,13 @@ myTweet.set('message', 'Hello, world!');
  */
 
 /* Listen for our model's `change` event: */
-myTweet.on('change',
-  function(/* this event holds information about the change: */ e) {
+myTweet.on('change',function(/* this event holds information about the change: */ e) {
     // Let ourselves know that something was changed:
     console.info('Something in this tweet model was changed!');
     console.log(e);
 
     // Write code to log the changed attribute:
-// window.alert(YOUR CODE HERE);
+window.alert("changed attribute: " + e.attributes.message);
   }
 );
 
@@ -96,7 +95,7 @@ myTweet.on('change',
  * by the framework. Review these now (at http://backbonejs.org/#Model-set)
  * and write a one-liner that will make our `change` listener fire: */
 
-// myTweetYOUR CODE HERE;
+myTweet.set('message', 'hello')
 
 /* Once you have the `change` event firing, move on to rendering! */
   </script>
