--- a/tutorial/2-views.html
+++ b/tutorial/2-views.html
@@ -26,15 +26,26 @@ var Comment = Backbone.Model.extend({
   initialize: function(message) {
     /* Set the initial values for `votes` to 0 and `message` to the message.
      * Remember to use setters when working with attributes! */
+     this.set('votes', 0);
+     this.set('message', message);
   },
   votes: function() {
     /* Return the votes attribute on this model.
      * Remember to use a getter when working with attributes! */
+     return this.get('votes');
   },
   upvote: function(){
     // Set the `votes` attribute to the current vote count plus one.
-  }
+    var currentVotes = this.get('votes'); 
+    this.set('votes', currentVotes+1);
+  },
   // Add a downvote function; don't forget the comma above.
+  downvote: function(){
+    // Set the `votes` attribute to the current vote count plus one.
+    var currentVotes = this.get('votes'); 
+    this.set('votes', currentVotes-1);
+  }
+
 });
 
 /* - Backbone VIEW ------------------------------------------------------------
@@ -122,9 +133,11 @@ var CommentView = Backbone.View.extend({
 /* Create a new comment model using our Comment class,
  * passing the first message as an argument: */
 var comment = new Comment('This is a message');
+var comment2 = new Comment('This is our message');
 
 // Create a view, and associate it with this model:
 var commentView = new CommentView({ model: comment });
+var commenV2 = new CommentView({model: comment2});
 
 /* Notice that we instantiate the view with an object {model: comment}.
  * This is called an options hash. With views, if we pass an object with
@@ -137,7 +150,7 @@ var commentView = new CommentView({ model: comment });
  */
 
 // Append the view to the page. This is why we returned html from `render`:
-// $('body').append(commentView.render());
+$('body').append(commentView.render());
 
 /* The number of votes should be 0.
  * We set that as the initial default value in the comment model.
@@ -145,7 +158,7 @@ var commentView = new CommentView({ model: comment });
  * Let's change it and see our eventlistener in action.
  * Uncomment the line below and reload the page,
  * and it should say '1' to the left of the comment. */
-// comment.upvote();
+ comment.upvote();
 
 /* play with this in your console as well.
  * You can modify the comment object in the same way we just did:
