--- a/tutorial/3-collections.html
+++ b/tutorial/3-collections.html
@@ -110,7 +110,20 @@ var CommentsView = Backbone.View.extend({
     /* Render each model in the collection as a list item (<li>).
      * Remember, we have the underscore functions: */
     this.$el.find('ul').append(this.collection.map(function(comment) {
+      console.log(comment)
       // YOUR CODE HERE
+      var $listEl = $ 
+      var commentV = new CommentView({model: comment});
+      return $('<li> </li>').append(commentV.render());
+
+    //   return  [
+    //   '<li>',
+    //       commentV.render(),
+    //       // comment.get('message'),
+    //       // " ",
+    //       // comment.get('votes'),
+    //   '</li>'
+    // ].join('');
     }));
 
     return this.$el;
@@ -134,7 +147,7 @@ var comments = new Comments(commentList);
 var commentsView = new CommentsView({ collection: comments });
 
 // Append it to the page (uncomment this when you are ready):
-// $('body').append(commentsView.render());
+ $('body').append(commentsView.render());
     </script>
   </body>
 </html>
